welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:9: error: not found: value OldY
  var newY:Int = OldY
                 ^